@@ -1,6 +1,5 @@
 package TestFor::Code::TidyAll::Zglob;
 
-use File::Zglob;
 use Test::Class::Most parent => 'TestHelper::Test::Class';
 use Code::TidyAll::Util::Zglob qw(zglob_to_regex);
 
